--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <div class="container">
     <div class="header">
         <h1>Sorry, you have been blocked</h1>
-        <p>You are unable to access tyk.io</p>
+        <p>You are unable to access test.io</p>
     </div>
     <div class="content">
         <div class="error-icon">
-            <img src="path_to_your_error_icon.png" alt="Error">
+            <img src="https://cdn0.iconfinder.com/data/icons/shift-free/32/Error-512.png" alt="Error">
         </div>
         <div class="message">
             <h2>Why have I been blocked?</h2>
