--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="header">
         <h1>Sorry, you have been blocked</h1>
-        <p>You are unable to access test.io</p>
+        <p>You are unable to access Blocked Page</p>
     </div>
     <div class="content">
         <div class="error-icon">
@@ -20,7 +20,7 @@
             <h2>Why have I been blocked?</h2>
             <p>This website is using a security service to protect itself from online attacks. The action you just performed triggered the security solution. There are several actions that could trigger this block including submitting a certain word or phrase, a SQL command or malformed data.</p>
             <h2>What can I do to resolve this?</h2>
-            <p>You can email the site owner to let them know you were blocked. Please include what you were doing when this page came up and the Cloudflare Ray ID found at the bottom of this page.</p>
+            <p>You can email the site owner to let them know you were blocked. Please include what you were doing when this page came up.</p>
         </div>
     </div>
 </div>
